persistent_volume/app-airflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
   airflow-app: webserver
  name: airflow-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      airflow-app: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        airflow-app: webserver
    spec:
      containers:
        - name: airflow-webserver
          args:
            - webserver
          image: 'ibnay/kube-airflow:1.10.10'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          # resources: {}
          volumeMounts:
            - name: airflow-dags-claim
              mountPath: /app/airflow/codes
      restartPolicy: Always
      volumes:
        - name: airflow-dags-claim
          persistentVolumeClaim:
            claimName: airflow-dag-pv
      # serviceAccountName: ""
status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    airflow-app: webserver
  name: airflow-webserver
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    airflow-app: webserver
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    airflow-app: scheduler
  name: airflow-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      airflow-app: scheduler
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        airflow-app: scheduler
    spec:
      containers:
      - name: airflow-scheduler
        args:
          - scheduler
        image: 'kube-airflow:1.10.10'
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: airflow-dags-claim
            mountPath: /app/airflow/codes
      restartPolicy: Always
      # serviceAccountName: ""
      volumes:
        - name: airflow-dags-claim
          persistentVolumeClaim:
            claimName: airflow-dag-pv
status: {}
