persistent_volume/app-minio.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: airflow-minio
   labels:
     airflow-app: minio
 spec:
   replicas: 1
   selector:
     matchLabels:
       airflow-app: minio
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         airflow-app: minio
     spec:
       containers:
         - name: airflow-minio
           args:
             - server
             - /data
           env:
             - name: MINIO_ACCESS_KEY
               value: "minio"
             - name: MINIO_SECRET_KEY
               value: "minio123"
           image: 'minio/minio'
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 9000
           # resources: {}
           volumeMounts:
             - name: airflow-dags-claim
               mountPath: "/data"
           readinessProbe:
             httpGet:
               path: /minio/health/ready
               port: 9000
             initialDelaySeconds: 20
             periodSeconds: 20
           livenessProbe:
             httpGet:
               path: /minio/health/live
               port: 9000
             initialDelaySeconds: 20
             periodSeconds: 20

         - name: airflow-minio-mc
           image: 'ibnay/minio-mc:latest'
           imagePullPolicy: IfNotPresent
           env:
             - name: HOST_ALIAS
               value: "gcs-minio"
             - name: ACCESS_KEY
               value: "" # Change with your ACCESS_KEY
             - name: SECRET_KEY
               value: "" # Change with your SECRET_KEY
             - name: DEST_FOLDER
               value: "/data"
             - name: CRON
               value: "1" # Value in minute
             - name: BUCKET
               value: "kubernetes-airflow" # Change with your bucket
            # resources: {}
           volumeMounts:
             - name: airflow-dags-claim
               mountPath: "/data"
       restartPolicy: Always
       volumes:
         - name: airflow-dags-claim
           persistentVolumeClaim:
             claimName: airflow-dag-pv
       # serviceAccountName: ""
 status: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    airflow-app: minio
  name: airflow-minio
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 9000
  selector:
    airflow-app: minio
status:
  loadBalancer: {}
